--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://172.16.2.176:8761/eureka/
+      defaultZone: http://peer1:8761/eureka/
   instance:
     prefer-ip-address: true
 server:
@@ -10,5 +10,5 @@ spring:
   application:
     name: service-inventory
   zipkin:
-    base-url: http://172.16.2.176:9411
+    base-url: http://peer1:9411
     
